@@ -8,13 +8,9 @@
  * REVISIONS:
  *   CSH 01/08-2000 Created
  */
-#include <roscfg.h>
-#include <tcpip.h>
-#include <lan.h>
-#include <address.h>
-#include <pool.h>
-#include <ip.h>
-#include <tilists.h>
+
+#include "precomp.h"
+
 
 NTSTATUS GetInterfaceIPv4Address( PIP_INTERFACE Interface, 
 				  ULONG TargetType,
