@@ -7,9 +7,8 @@
  * REVISIONS:
  *   CSH 01/08-2000 Created
  */
-#include <roscfg.h>
-#include <tcpip.h>
-#include <pool.h>
+
+#include "precomp.h"
 
 
 PVOID PoolAllocateBuffer(
