@@ -7,13 +7,8 @@
  * REVISIONS:
  *   CSH 01/08-2000 Created
  */
-#include <roscfg.h>
-#include <tcpip.h>
-#include <rawip.h>
-#include <routines.h>
-#include <datagram.h>
-#include <address.h>
-#include <pool.h>
+
+#include "precomp.h"
 
 
 BOOLEAN RawIPInitialized = FALSE;
